Update main site and redirect recent-work

--- a/index.html
+++ b/index.html
@@ -24,23 +24,58 @@
                         creativity on the web, on mobile, and in physical spaces. I use programming,
                         visual art, design, and writing.
                     </p>
-                    <a href="media/Resume2020.pdf" target="_blank">resume</a> · 
-                    <a href="mailto:key.draw@gmail.com" target="_blank">email</a> · 
-                    <a href="https://www.linkedin.com/in/elliot-evans/" target="_blank">linkedin</a> 
+                    <p>
+                        Please feel free to contact me by sending an e-letter to vez at duck dot com, or on <a href="https://www.linkedin.com/in/elliot-evans/" target="_blank">linkedin</a>.
+                    </p>
+                    
 
                     <h2 class="header">WORKS</h2>
                 </main>
                 <div class="horizontal-scroll-wrap">
                     <div class="project-section">
-                        <a href="https://esse-dev.github.io/a-web-monetization-story">
-                            <h3><b class="category-tag">web</b> A Web Monetization Story</b></h3>
-                            <img style="height: 60%;" src="media/wmstory1.png" alt="A screenshot of the landing page of 'A Web Monetization Story'">
+                        <a href="https://elliot.website/editor/">
+                            <h3><b class="category-tag">research</b> Polytope</b></h3>
+                            <img style="max-width: 50vw;" src="editor/update2_image3.png" alt="A screenshot of the Polytope prototype.">
+                        </a>
+                        <p>
+                            <i>2022 onwards - </i> A research project about combining text and visual programming.
+                    </div>
+                    <div class="project-section">
+                        <a href="https://elliot.website/qubit-talk/">
+                            <h3><b class="category-tag">presentation</b> What if you could see qubits!? 👀</b></h3>
+                            <img style="max-width: 50vw;" src="media/qubit_talk_sample.png" alt="A screenshot of a slide of the presentation.">
+                        </a>
+                        <p>
+                            <i>2021 - </i> A talk from PIQUE's 1 year anniversary event.
+                    </div>
+                    <div class="project-section">
+                        <a href="https://observablehq.com/@vezwork/qubit-playground">
+                            <h3><b class="category-tag">web</b> Qubit Playground Notebook</b></h3>
+                            <img style="max-width: 40vw;" src="media/qubit_playground_sample.png" alt="A screenshot of an Observable notebook.">
+                        </a>
+                        <p>
+                            <i>2021 - </i> An interactive article that let's you play around with the basics of Quantum Circuits.
+                    </div>
+                    <div class="project-section">
+                        <a href="https://akitaproject.site/">
+                            <h3><b class="category-tag">web</b> The Akita Project</b></h3>
+                            <img style="height: 60%;" src="media/akita.png" alt="A screenshot of the landing page of the Akita browser extension.">
                             <img style="height: 60%;" src="media/wmstory2.png" alt="A screenshot of the content of 'A Web Monetization Story'">
                         </a>
                         <p>
-                            <i>2020 - </i> Development and design in collaboration with
-                            <a href="https://twitter.com/_sharonwang" style="text-decoration: underline;">Sharon Wang</a> 
-                            for the <a href="https://betahack.devpost.com" style="text-decoration: underline;">Betahack 'Fix the Internet' hackathon</a>.</p>
+                            <i>2020 to 2021 - </i> A project to help cultivate the open and inclusive online payments community with
+                            <a href="https://twitter.com/_sharonwang" style="text-decoration: underline;">Sharon Wang</a>.
+                            Received $20000 USD funding to work on this as a side project for a year.
+                        </p>
+                    </div>
+                    <div class="project-section">
+                        <a href="https://vezwork.github.io/modallogic">
+                            <h3><b class="category-tag">web</b> Epistemic Logic Playground</b></h3>
+                            <img style="max-width: 40vw;" src="media/epistemic_play.png" alt="A screenshot of the epistemic logic playground.">
+                        </a>
+                        <p>
+                            <i>2020 - </i> My final project for non-classical logic. A playground for exploring modal epistemic logic.
+                        </p>
                     </div>
                     <div class="project-section">
                         <a href="https://elliot.website/joyride">
