--- a/recent-work/index.html
+++ b/recent-work/index.html
@@ -1,39 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#444">
-    <link rel="stylesheet" href="../main.css">
-    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Elliot.website - recent work</title>
-    <meta name="description" content="Elliot's portfolio website.">
-    <meta name="monetization" content="$ilp.uphold.com/2x8E7NZkrZFN">
-</head>
-
-<body>
-    <main class="main-text">
-        <a href="/" target="_blank">
-            < back to main site </a>
-                <h2 class="header">Recent Work</h2>
-                <p>
-                    Date: Nov 11 2021.<br>Here is my public work from the last year or so, from most to least recent:
-                </p>
-                <ul>
-                    <li><a href="/editor/">Polytope - Experimental Code Editor</a></li>
-                    <li><a href="/quantumcat-playground/">Qubit Playground - QuantumCat collaboration</a></li>
-                    <li><a href="/qubit-talk">Qubit Playground Interactive Presentation "What if you could see
-                            qubits!? 👀"</a></li>
-                    <li><a href="/qubit">Qubit Playground</a></li>
-                    <li><a href="https://akitaproject.site/">The Akita Project - Web Monetization Grant Project</a></li>
-                    <li>
-                        <a href="https://vezwork.github.io/modallogic/?model=;AS?formula=">Modal Logic Playground</a>
-                    </li>
-                </ul>
-    </main>
-</body>
-
-</html>
+<meta charset="utf-8" />
+<title>Redirecting to https://elliot.website</title>
+<meta http-equiv="refresh" content="0; URL=https://elliot.website" />
+<link rel="canonical" href="https://elliot.website" />
