--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                     <h1 class="logo">Elliot.Website</h1>
                     <h2 class="header">ABOUT</h2>
                     <p>
-                        This website is a collection of my creative work on the web. I explore
-                        creativity on the web, on mobile, and in physical spaces. I use programming,
-                        visual art, design, and writing.
+                        Hi, I'm Elliot. I'm currently really into combining text and visual programming. Keep scrolling to see some of my previous work on the web.
                     </p>
                     <p>
                         Please feel free to contact me by sending an e-letter to vez at duck dot com, or on <a href="https://www.linkedin.com/in/elliot-evans/" target="_blank">linkedin</a>.
