fix typo let's -> lets

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <img style="max-width: 40vw;" src="media/qubit_playground_sample.png" alt="A screenshot of an Observable notebook.">
                         </a>
                         <p>
-                            <i>2021 - </i> An interactive article that let's you play around with the basics of Quantum Circuits.
+                            <i>2021 - </i> An interactive article that lets you play around with the basics of Quantum Circuits.
                     </div>
                     <div class="project-section">
                         <a href="https://akitaproject.site/">
