change sharon's url

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </a>
                         <p>
                             <i>2020 to 2021 - </i> A project to help cultivate the open and inclusive online payments community with
-                            <a href="https://twitter.com/_sharonwang" style="text-decoration: underline;">Sharon Wang</a>.
+                            <a href="https://sharons.site" style="text-decoration: underline;">Sharon Wang</a>.
                             Received $20000 USD funding to work on this as a side project for a year.
                         </p>
                     </div>
