--- a/editor/index.html
+++ b/editor/index.html
@@ -203,6 +203,8 @@
 
               
         <ul>
+            <li><a href="https://2023.programming-conference.org/details/px-2023-papers/1/A-Caret-for-Your-Thoughts-Adapting-Caret-Navigation-to-Visual-Editors">PX/23 Presentation: "A Caret for Your Thoughts: Adapting Caret (Ꮖ) Navigation to Visual Editors" - 🔜 March 14<sup>th</sup> 2023</a></li>
+            <li><a href="update3.html">Towards "Text-Editor-ish" UX - Feb 15<sup>th</sup> 2023</a></li>
             <li><a href="https://github.com/vezwork/Polytope">Open-sourced Polytope Experiment 1 on Github - August 15<sup>th</sup> 2022</a></li>
             <li><a href="https://www.youtube.com/watch?v=8g_XCZSY7lM">Demo'd Polytope on YouTube - July 7<sup>th</sup> 2022</a></li>
             <li><a href="https://2022.programming-conference.org/details/px-2022-papers/7/let-chart-let-song-Embedding-Visual-Languages-in-Code">Presented at PX/22 - March 26<sup>th</sup> 2022</a></li>
