Add SVG attribution

--- a/editor/update3.html
+++ b/editor/update3.html
@@ -1895,6 +1895,12 @@
         this, I've refined these ideas, making them more precise and useful. I
         look forward to sharing more!
       </p>
+      <br /><br />
+      <i style="color: #777"
+        >Attribution: Save Icon SVG: PICOL, PIctorial COmmunication Language, CC
+        BY 3.0 <https://creativecommons.org/licenses/by/3.0>, via Wikimedia
+        Commons</i
+      >
     </section>
   </body>
 </html>
