move apocalypse chess url to glitch

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </div>-->
 
                     <div class="project-section">
-                        <a href="http://apocalypsechess.online/">
+                        <a href="https://apocalypsechess-online.glitch.me/">
                             <h3><b class="category-tag">game</b> Apocalypse Chess Online</b></h3>
                             <img style="height: 20%;" src="media/apoc1.png" alt="The Apocalypse Chess logo">
                             <img style="height: 50%;" src="media/apoc2.png" alt="A screenshot of apocalypsechess.online">
