--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
                             <i>2022 onwards - </i> A research project about combining text and visual programming.
                     </div>
                     <div class="project-section">
+                        <a href="https://www.linkedin.com/pulse/what-dev-like-canadian-startup-elliot-evans">
+                            <h3><b class="category-tag">article</b> What is Dev Like at a Canadian Startup?</b></h3>
+                            <img style="max-width: 50vw; max-height: 50vh;" src="media/cad_startup_dev.webp" alt="Images of devs looking at Computers and the word Opslock">
+                        </a>
+                        <p>
+                            <i>2022 - </i> An article I wrote about my previous workplace, Opslock.
+                    </div>
+                    <div class="project-section">
                         <a href="https://elliot.website/qubit-talk/">
                             <h3><b class="category-tag">presentation</b> What if you could see qubits!? 👀</b></h3>
-                            <img style="max-width: 50vw;" src="media/qubit_talk_sample.png" alt="A screenshot of a slide of the presentation.">
+                            <img style="max-width: 50vw; max-height: 50vh;" src="media/qubit_talk_sample.png" alt="A screenshot of a slide of the presentation.">
                         </a>
                         <p>
                             <i>2021 - </i> A talk from PIQUE's 1 year anniversary event.
@@ -69,7 +77,7 @@
                     <div class="project-section">
                         <a href="https://vezwork.github.io/modallogic">
                             <h3><b class="category-tag">web</b> Epistemic Logic Playground</b></h3>
-                            <img style="max-width: 40vw;" src="media/epistemic_play.png" alt="A screenshot of the epistemic logic playground.">
+                            <img style="max-width: 40vw; max-height: 50vh;" src="media/epistemic_play.png" alt="A screenshot of the epistemic logic playground.">
                         </a>
                         <p>
                             <i>2020 - </i> My final project for non-classical logic. A playground for exploring modal epistemic logic.
@@ -135,13 +143,13 @@
 
                     <div class="project-section">
                         <h3><b class="category-tag">other</b> CAMP festival CAMPfire hologram</h3>
-                        <video autoplay muted loop style="height: 60%;">
+                        <video autoplay muted loop style="height: 60%; max-height: 40vh;">
                             <source src="media/campfire.mov" type="video/mp4">
                             Your browser does not support the video tag. This is a video of
                             a hand moving overtop of the CAMP festival hologram installation, causing
                             the holographic flame to react.
                         </video>
-                        <img src="media/campfire2.JPG" style="height: 60%;" alt="A photo of the CAMP festival venue, with people sitting facing a stage, and featuring the CAMPfire hologram installation in the middle of the room">
+                        <img src="media/campfire2.JPG" style="height: 60%; max-height: 40vh;" alt="A photo of the CAMP festival venue, with people sitting facing a stage, and featuring the CAMPfire hologram installation in the middle of the room">
                         <p><i>2016 - </i> An interactive fire installation featured at the center of the CAMP festival in Calgary, Alberta. 
                             I developed the hologram software. I used WebGL and the leap motion API. 
                             The flame grew as the audience made noise, and shrunk when a hand was above it.
