--- a/editor/index.html
+++ b/editor/index.html
@@ -203,6 +203,7 @@
 
               
         <ul>
+            <li><a href="https://github.com/vezwork/polylab/tree/main/src/demo/caretope">Caretope is on GitHub - September 19<sup>th</sup> 2023</a></li>
             <li><a href="https://www.youtube.com/watch?v=r--d5XlUyT4">"A Caret for Your Thoughts" is now on Youtube! - March 31<sup>th</sup> 2023</a></li>
             <li><a href="https://2023.programming-conference.org/details/px-2023-papers/1/A-Caret-for-Your-Thoughts-Adapting-Caret-Navigation-to-Visual-Editors">PX/23 Presentation: "A Caret for Your Thoughts: Adapting Caret (Ꮖ) Navigation to Visual Editors" - March 14<sup>th</sup> 2023</a></li>
             <li><a href="update3.html">Towards "Text-Editor-ish" UX - Feb 15<sup>th</sup> 2023</a></li>
