Add two new entries on main page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
                 </main>
                 <div class="horizontal-scroll-wrap">
                     <div class="project-section">
+                        <a href="https://vezwork.github.io/polylab/dist/demo/articles/exploring_spaces/">
+                            <h3><b class="category-tag">articles</b> Exploring Spaces</b></h3>
+                            <img style="max-width: 30vw;" src="media/spacepromo.png" alt="A promo screenshot of the linked articles">
+                        </a>
+                        <p>
+                            <i>2024 onwards - </i> Let's explore some mathematical spaces!
+                    </div>
+                    <div class="project-section">
+                        <a href="https://vezwork.github.io/polylab/dist/demo/2023/projects.html">
+                            <h3><b class="category-tag">research</b> My 2023 Projects</b></h3>
+                            <img style="max-width: 50vw;" src="media/2023promo.png" alt="A screenshot of the linked article">
+                        </a>
+                        <p>
+                            <i>2023 -</i> In 2023 I took a lot of time off of work to focus on mental and physical health and research. Here's the projects I worked on.
+                    </div>
+                    <div class="project-section">
                         <a href="https://elliot.website/editor/">
                             <h3><b class="category-tag">research</b> Polytope</b></h3>
                             <img style="max-width: 50vw;" src="editor/update2_image3.png" alt="A screenshot of the Polytope prototype.">
