--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h1 class="logo">Elliot.Website</h1>
                     <h2 class="header">ABOUT</h2>
                     <p>
-                        Hi, I'm Elliot. I'm currently into mixing text and visual programming. Keep scrolling to see some of my previous work on the web.
+                        Hi, I'm Elliot. I'm currently doing contract work and a research residency at <a href="https://www.inkandswitch.com/">ink & switch</a>. Keep scrolling to see some of my previous work on the web.
                     </p>
                     <p>
                         Please feel free to contact me by sending an e-letter to vez at duck dot com, or on <a href="https://www.linkedin.com/in/elliot-evans/" target="_blank">linkedin</a>.
