Add 2024 stuff to index

--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
                 </main>
                 <div class="horizontal-scroll-wrap">
                     <div class="project-section">
+                        <a href="https://vezwork.github.io/drostes-lair-post/">
+                            <h3><b class="category-tag">research</b> Droste's Lair</b></h3>
+                            <img style="max-width: 30vw;" src="media/droste.jpg" alt="A promo screenshot of the linked article">
+                        </a>
+                        <p>
+                            <i>2024 -</i> an experimental visual programming environment (which takes place in a dungeon). Made in collaboration with <a href="https://joshuahhh.com" style="text-decoration: underline;">Josh Horowitz</a>.
+                    </div>
+                    <div class="project-section">
+                        <a href="https://live24.clerk.vision/">
+                            <h3><b class="category-tag">research</b> Live Programming a Live Programming Environment</b></h3>
+                            <img style="max-width: 40vw;" src="media/nextjournal_live.svg" alt="A promo screenshot of the linked article">
+                        </a>
+                        <p>
+                            <i>2024 -</i> Researched and prepared a paper with <a href="https://nextjournal.com/" style="text-decoration: underline;">Nextjournal</a> to appear at the <a href="https://liveprog.org" style="text-decoration: underline;">2024 LIVE workshop</a>.
+                    </div>
+                    
+                    <div class="project-section">
+                        <a href="https://vis.csail.mit.edu/pubs/bluefish/">
+                            <h3><b class="category-tag">creative code</b> Bluefish.js example diagrams</b></h3>
+                            <img style="max-height: 50vh;" src="media/bluefish_diagrams.png" alt="Diagrams I made for Bluefish.js.">
+                        </a>
+                        <p>
+                            <i>2024 -</i> I programmed a varied collection of example diagrams for <a href="https://bluefishjs.org" style="text-decoration: underline;">Bluefish.js</a>. Diagrams were colored by Catherine Mei.
+                    </div>
+                    <div class="project-section">
                         <a href="https://vezwork.github.io/polylab/dist/demo/articles/exploring_spaces/">
                             <h3><b class="category-tag">articles</b> Exploring Spaces</b></h3>
                             <img style="max-width: 30vw;" src="media/spacepromo.png" alt="A promo screenshot of the linked articles">
