Change akita project site url

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <i>2021 - </i> An interactive article that lets you play around with the basics of Quantum Circuits.
                     </div>
                     <div class="project-section">
-                        <a href="https://akitaproject.site/">
+                        <a href="https://esse-dev.github.io/akita-project-site/">
                             <h3><b class="category-tag">web</b> The Akita Project</b></h3>
                             <img style="height: 60%;" src="media/akita.png" alt="A screenshot of the landing page of the Akita browser extension.">
                             <img style="height: 60%;" src="media/wmstory2.png" alt="A screenshot of the content of 'A Web Monetization Story'">
