--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <h2 class="header">ABOUT</h2>
                     <p>
                         
-                        Hi, I'm Elliot. I'm currently doing 
+                        Hi, I'm Elliot. I've recently been doing:
                         <ul>
                             <li>contract work</li>
-                            <li>a research residency at <a href="https://www.inkandswitch.com/">ink & switch</a></li>
+                            <li>a <a href="https://vezwork.github.io/polylab/dist/demo/2025_2/residency/">research residency</a> at <a href="https://www.inkandswitch.com/">ink & switch</a></li>
                             <li>
                                 <a href="https://tentpole.computer">
                                     <svg width="40" height="40" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle">
